# image-rust

./: .gitignore  Cargo.toml  README.md  bench.py  bench.sh  deploy.sh
src/: image_processor.rs  main.rs
terraform/: main.tf  terraform.tfvars.example  tfplan  variables.tf
terraform/functions/: url-rewrite.js
