[package]
name = "image_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version = "1.5.10", features = ["behavior-version-latest"]}
aws-credential-types = {version = "1.2.1", features = ["hardcoded-credentials"]}
aws-sdk-s3 = "1.64.0"
aws-sdk-sns = "1.59.0"
base64 = "0.22.1"
fast_image_resize = { version = "5.1.2", features = ["image"] }
image = { version = "0.25.5", features = ["webp", "avif"] }
lambda_runtime = "0.13.0"
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
webp = "0.3.0"
