[package]
name = "image_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version = "1.6.0", features = ["behavior-version-latest"]}
aws-credential-types = {version = "1.2.1", features = ["hardcoded-credentials"]}
aws-sdk-s3 = "1.79.0"
aws-sdk-sns = "1.63.0"
base64 = "0.22.1"
fast_image_resize = { version = "5.1.2", features = ["image"] }
image = { version = "0.25.5", features = ["webp", "avif"] }
lambda_runtime = "0.13.0"
ravif = "0.11.11"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
webp = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
